--- a/todo
+++ b/todo
@@ -23,7 +23,7 @@ Créer les tables et données nécessaires qui permettent de gérer les fonction
 1. Gestion des livraisons (Création , Statut)
     a. les colis correspondants
     b. Paramètre par livraison
-        i. cout de revient ( voiture + chauffeur (salaire journalier différent)
+        i. cout de revient ( voiture + chauffeur (salaire journalier différent))
         ii. colis par kg
 2. Créer directement les autres données nécessaires dans la table
 3. Page pour afficher les bénéfices par période (jour, mois, année)
